# Feynman_Simulator

./: .clang-format  .gitignore  0_MC_statis.hkl  1_MC_statis.hkl  2_MC_statis.hkl  2_para.txt  3_MC_statis.hkl  Doxyfile  Dyson_Output.txt_bkp  Fermion_Simulator.dot  IO.py  Output  README.md  Weight.hkl_Beta2.0  Weight.hkl_N8_G0  Weight.hkl_backup  Weight.hkl_backup_N8  _job_MC_0.sh  _job_MC_1.sh  _job_MC_2.sh  _test  basis.py  clear.sh  collect.py  compile.sh  config_plot.sh  convention.h  draw.py  hickle.py  inlist.py  inlist_new.py  job_class.py  job_manager.py  killthemall.py  mem.py  model.py  mytop.sh  plot.plt  print_sigma.py  pyrochlore.pvcc  (+11 more)
src/: CMakeLists.txt  FindNumPy.cmake  FindPythonLibsNew.cmake  definition.cpp  definition.h  environment.cpp  environment.h  initialization.cpp  initialization.h  job.cpp  job.h  lattice.cpp  lattice.h  main.cpp  makefile  mytop.sh  tags  test.cpp  test.h  weight_base.h  weight_inherit.h  weight_inheritance.h
src/diagram/: component.cpp  component.h  component_IO.cpp  component_bundle.cpp  component_bundle.h  diagram.cpp  diagram.h  diagram_IO.cpp  diagram_check.cpp  diagram_initialize.config  diagram_template.config  diagram_test.cpp
src/environment/: _in_MC_test  enDyson.cpp  envDiagMonteCarloCalc.cpp  envDyson.cpp  envMonteCarlo.cpp  env_test.cpp  environment.cpp  environment.h
src/estimator/: estimator.cpp  estimator.h  estimator_test.cpp
src/job/: _in_MC_test  inlist_template.py  job.cpp  job.h
src/lattice/: lattice.cpp  lattice.h  lattice_test.cpp  vector.cpp  vector.h
src/markov/: markov.cpp  markov.h  markov_monitor.cpp  markov_monitor.h  markov_test.cpp
src/module/calculator/: calculator.cpp  calculator.h  dyson.cpp  dyson.h
src/module/diagCalc/: configuration.cpp  diag_calculator.h  diagram_dict.cpp  markov_monitor.cpp  monte_carlo.cpp
src/module/diagram/: component.cpp  component.h  component_IO.cpp  component_bundle.cpp  component_bundle.h  diagram.cpp  diagram.h  diagram_IO.cpp  diagram_check.cpp  diagram_filter.cpp  diagram_initialize.config  diagram_template.config  diagram_test.cpp
src/module/dyson/: dyson.cpp  dyson.h  dyson_test.cpp
src/module/markov/: extra_gamma3_updates.cpp_bkp  gamma3_updates.cpp  markov.cpp  markov.h  markov_diag_counter.cpp  markov_monitor.cpp  (+4 more)
src/observable/: diagram_object.cpp  diagram_object.h  estimate.cpp  estimate.h  observable.cpp  observable.h  observable_IO.cpp  observable_test.cpp  weight.cpp  weight.h  weight_IO.cpp  weight_generic.cpp  weight_specific.cpp
src/parameter/: _in_MC_test  job.cpp  job.h  parameter.cpp  parameter.h  parameter_map.cpp  parameter_map.h  parser.cpp  parser.h  state.cpp  state.h  status.cpp  status.h
src/utility/: abort.cpp  abort.h  array.cpp  array.h  array_test.cpp  benchmark.cpp  cnpy.cpp  cnpy.h  cnpy_test.cpp  complex.cpp  complex.h  convention.h  crc32.cpp  crc32.h  crc32_test.cpp  dictionary.cpp  dictionary.h  dictionary_test.cpp  fft.cpp  fft.h  fft_test.cpp  logger.cpp  logger.h  momentum.cpp  momentum.h  parser.cpp  parser.h  pystring.cpp  pystring.h  pystring_test.cpp  pystring_unittest.h  rng.cpp  rng.h  rng_test.cpp  scopeguard.h  sput.h  sput_tutorial.txt  timer.cpp  timer.h  timer_test.cpp  (+5 more)
src/zlib/: crc32.c
(+176 files in other folders)
