cmake_minimum_required (VERSION 2.6)
project (FeynmanSimulator)
#set(CMAKE_CXX_COMPILER icpc)
set(CMAKE_CXX_COMPILER clang++)
#set(CMAKE_CXX_FLAGS "-lz")
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_DEBUG "-g")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(CMAKE_INCLUDE_PATH "src")
include_directories(${FeynmanSimulator_SOURCE_DIR})

file(GLOB_RECURSE SRCS *.cpp)
file(GLOB_RECURSE HDRS *.h)
ADD_EXECUTABLE(FeynmanSimulator  ${SRCS} ${HDRS})

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
message(${PYTHON_INCLUDE_PATH})
message(${PYTHON_LIBRARIES})
find_package(NumPy REQUIRED)
message(${NUMPY_VERSION})
include_directories(${NUMPY_INCLUDE_DIRS})
target_link_libraries(FeynmanSimulator ${PYTHON_LIBRARIES})
